fixed some layout bugs in the main content container and finalized the layout. Also filled the grid cards with some content

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Roboto', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif;
+    background-color: rgb(226, 232, 240);
 }
 
 *{
@@ -11,7 +12,6 @@ body {
 .main-container {
     display: grid;
     grid-template-columns: 1fr 4fr;
-   
 }
 
 
@@ -88,6 +88,7 @@ body {
     grid-template-rows: minmax(40px, 80px) minmax(90px, 110px);
     grid-column: 1/3;
     box-shadow: 1px 0px 5px -1px rgba(0,0,0,0.68);
+    background-color: white;
 
 }
 
@@ -247,12 +248,36 @@ input:focus {
 
 .main-content {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, minmax(200px, 1fr))  0.5fr;
     grid-template-rows: repeat(3, 1fr);
-    height: 80%;
+    margin: 80px;
+    gap: 30px;
+    height: 70%;
+    
+
 }
 
-.main-content>div:nth-child(7) {
+.main-content-grid-7 {
     grid-column: 3/4;
     grid-row: 1/3;
+    /* max-width: 300px; */
+    min-height: 300px;
+    max-height: 450px;
+
+    
+}
+
+.main-content-grid-8 {
+    grid-column: 3/4;
+    grid-row: 2/4;
+    margin-top: 200px;
+   /*  max-width: 300px; */
+    min-height: 300px;
+    max-height: 400px;
+    
+    
+}
+
+.main-content div {
+    outline: 1px solid blue
 }
